# rate-tg-bot

./: .env.example  .gitignore  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  integration.yaml
api/: Dockerfile  requirements.txt
api/apps/core/: permissions.py  urls.py  views.py
api/apps/core/management/commands/: consumer_up.py  (+1 more)
api/apps/core/services/: use_case.py
api/apps/currencies/: apps.py  models.py  repos.py  serializers.py  tasks.py  urls.py  views.py
api/apps/currencies/migrations/: 0001_initial.py  0002_currency_created_at_currency_updated_at_and_more.py  0003_remove_currency_scale_rate_scale_alter_rate_rate.py
api/apps/utils/: apps.py  utils.py
api/services/: domains.py  workers.py
api/services/parser/: domains.py  parsers.py
api/settings/: asgi.py  celery.py  settings.py  urls.py
bot/: config.py  main.py  requirements.txt
bot/domains/: currencies.py  dto.py
bot/events/: __init__.py  answers.py
bot/events/commands/: handlers.py
bot/events/currenccies/: handler.py
bot/services/: use_case.py
bot/services/apis/: currency_api.py
bot/utils/: callbacks.py
bot/utils/keyboards/: __init__.py  buttons.py  generate.py
deploy/: init-letsencrypt.sh
deploy/nginx/: default.conf
parser/: Dockerfile  conf.py  domains.py  main.py  requirements.txt  utils.py
parser/broker/: producer.py
parser/kafka/: producer.py
parser/services/parser/: parsers.py
web/: Dockerfile  main.py  requirements.txt
web/static/: style.css
web/static/js/: scripts.js
web/templates/: auth.html
(+6 files in other folders)
