[tool.poetry]
name = "currencybot"
version = "0.1.0"
description = ""
authors = ["IlyaBulatau <ilyabulatau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
aiogram = "3.3"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
