[tool.poetry]
name = "currencybot"
version = "0.1.0"
description = ""
authors = ["IlyaBulatau <ilyabulatau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
aiogram = "3.3"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
black = "^24.2.0"
confluent-kafka = "^2.3.0"
pytz = "^2024.1"
gunicorn = "^21.2.0"
pika = "^1.3.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
